<resources>

    <string name="app_name">LunchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name_string">Name:</string>
    <string name="address_string">Address:</string>
    <string name="save_string">save</string>
    <string name="type_string">Type:</string>
    <string name="take_out_string">Take-Out</string>
    <string name="sit_down_string">Sit-Down</string>
    <string name="delivery_string">Delivery</string>
    <string name="string_notes">Notes:</string>
    <string name="url_string">Feed URL</string>
    <string name="rss_string">RSS Feed</string>
    <string name="location_string">Locationn:</string>
    <string name="notset_string">(not set)</string>
    <string name="saveLocation_string">Save Location</string>
    <string name="map_item_string">Show on Map</string>
    <string name="alarm_title_string">Sound a Luch Alarm</string>
    <string name="alarm_summary">Check if you want to know when iti si time for lunch</string>
    <string name="alarm_time_tile_string">Lunch Alarm Time</string>
    <string name="i_live_in_a_universal_machine">Set you desired time for the lunch alarm</string>
    <string name="alarm_text">It\'s it for lunch</string>
    <string name="notification_title_string">Use a Notification</string>
    <string name="notification_summary">Check if you want a sstatus bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="empty">No restaurants!</string>
    <string name="help_string">HELP!</string>
    
</resources>