<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Flip" />
	<ViewFlipper 
	    android:id="@+id/flip"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/restaurants"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:shrinkColumns="1"
                android:stretchColumns="1" >

                <TableRow>

                    <TextView android:text="@string/name_string" />

                    <EditText android:id="@+id/name" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/address_string" />

                    <EditText android:id="@+id/addr" />
                </TableRow>

                <TableRow>

                    <TextView android:id="@string/type_string" />

                    <RadioGroup android:id="@+id/types" >

                        <RadioButton
                            android:id="@+id/take_out"
                            android:checked="true"
                            android:text="@string/take_out_string" />

                        <RadioButton
                            android:id="@+id/sit_down"
                            android:text="@string/sit_down_string" />

                        <RadioButton
                            android:id="@+id/delivery"
                            android:text="@string/delivery_string" />
                    </RadioGroup>
                </TableRow>
                <DatePicker
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_string" />
            </TableLayout>
        </FrameLayout>
    </LinearLayout>
    </ViewFlipper>

</LinearLayout>